Fix footer text alignment on smaller screens

--- a/docs/css/docs.css
+++ b/docs/css/docs.css
@@ -269,6 +269,7 @@ footer {
   flex-direction: column;
   align-items: center;
   padding-bottom: 40px;
+  text-align: center;
 }
 
 footer a,
